# c-compilou

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  ast.ml  ast_mips.ml  astmips.ml  compile_mips.ml  compile_mips.mli  compilec.ml  compilec.mli  compilou.ml  dune  errors.ml  lexer.mll  mips.ml  mips.mli  parser.mly  test.c  test.s  test.sh  test_macos.sh  tmp.ml
tests/: binop.c  binop.test  declare_fun.c  declare_fun_no_body.c  error_arg.c  error_expr.c  error_retval.c  test_oldnew.c  test_oldnew.test  test_prof.c  test_prof.test  void.c
